--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,42 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+.text-bold{
+    font-weight: bold;
+}
+
+.line-bottom{
+    border-bottom: 1px solid #808080;
+}
+
+.ion-button-light {
+    --background: #fff;
+    --color: var(--ion-color-warning) !important;
+    font-weight: bold;
+    margin-top: 5px;
+}
+
+ion-input,
+ion-datatime,
+ion-select {
+    color: #80808080 !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
