--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="warning">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-button>
+        <ion-icon slot="icon-only" name="search"></ion-icon>
+      </ion-button>
     </ion-buttons>
     
     <ion-title>
       Tarefas
     </ion-title>
+
+    <ion-button>
+      <ion-icon slot="icon-only" name="settings-outline"></ion-icon>
+    </ion-button>
+
+    <ion-button (click)="exibirAlertLogout()">
+      <ion-icon slot="icon-only" name="exit-outline"></ion-icon>
+    </ion-button>
+
   </ion-toolbar>
 </ion-header>
 
