--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,22 +5,24 @@
         <ion-icon slot="icon-only" name="search"></ion-icon>
       </ion-button>
     </ion-buttons>
-    
+
     <ion-title>
       Tarefas
     </ion-title>
 
-    <ion-button>
+    <ion-buttons slot="end"></ion-buttons>
+    <ion-button routerLink="/configuracoes">
       <ion-icon slot="icon-only" name="settings-outline"></ion-icon>
     </ion-button>
 
     <ion-button (click)="exibirAlertLogout()">
       <ion-icon slot="icon-only" name="exit-outline"></ion-icon>
     </ion-button>
+    </ion-buttons>
 
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  
+
 </ion-content>
